# haskell-tidbits

./: LICENSE  Makefile  README  math.hs
hw/: Makefile  hw.hs
intro/: Introduction.hs  Introduction.java  Introduction.lisp  Makefile
person/: Makefile  person.hs
pjhask/: pjhask.cabal
pjhask/src/: Main.hs
quantum/: Makefile  quantum.hs  quantum.lisp
substs/: Makefile  Makefile.~1~  Makefile.~2~  substs.hs  substs.hs.~1~
tictactoe/: Makefile  tictactoe.hs
