cabal-version: >=2
name: pjhask
version: 0.1.0
build-type: Simple
author: Pascal Jacques Bourguignon

executable pjhask
  main-is: Main.hs
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -fno-warn-missing-home-modules 
  other-extensions: OverloadedLabels OverloadedLists OverloadedStrings
  build-depends:
      aeson
      , base
      , bytestring
      , containers
      , text
  other-modules:

